--- a/client/src/index.css
+++ b/client/src/index.css
@@ -415,30 +415,6 @@ footer {
 .comment-delete-btn:hover {
     background-color: var(--pink-red-dark);
 }
-/* For view singular article end */
-
-@keyframes slideDown {
-    from {
-        opacity: 0;
-        transform: translateX(-50%) translateY(-20px);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(-50%) translateY(0);
-    }
-}
-
-@keyframes slideUp {
-    from {
-        opacity: 0;
-        transform: translateX(-50%) translateY(20px);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(-50%) translateY(0px);
-    }
-}
-
 .comment-edit-form {
     margin-bottom: 10px;
     max-width: 100%;
@@ -474,6 +450,7 @@ footer {
 }
 
 .manage-comment-menu {
+    display: flex;
     gap: 16px;
 }
 
@@ -504,3 +481,42 @@ footer {
 .cancel-comment-btn:hover {
     background-color: var(--dark);
 }
+
+
+/* For view singular article end */
+
+@keyframes slideDown {
+    from {
+        opacity: 0;
+        transform: translateX(-50%) translateY(-20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(-50%) translateY(0);
+    }
+}
+
+@keyframes slideUp {
+    from {
+        opacity: 0;
+        transform: translateX(-50%) translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(-50%) translateY(0px);
+    }
+}
+
+
+/* Viewing all articles */
+
+.articles-wrapper{
+    max-width: 750px;
+}
+
+.center-main{
+    display: flex;
+    justify-content: center;
+}
+
+/* Viewing all articles end*/
