--- a/client/src/index.css
+++ b/client/src/index.css
@@ -171,6 +171,7 @@ main {
 
 .content-wrapper {
     max-width: 750px;
+    min-width: 250px;
 }
 
 footer {
@@ -361,7 +362,7 @@ footer {
     border-radius: 3px;
 }
 
-.comment-edit-btn {
+.edit-btn {
     width: 75px;
     height: 35px;
     border: none;
@@ -370,12 +371,12 @@ footer {
     background-color: var(--mimi-pink);
 }
 
-.comment-edit-btn:active,
-.comment-edit-btn:hover {
+.edit-btn:active,
+.edit-btn:hover {
     background-color: var(--lilac);
 }
 
-.comment-delete-btn {
+.delete-btn {
     width: 75px;
     height: 35px;
     border: none;
@@ -385,8 +386,8 @@ footer {
     background-color: var(--pink-red);
 }
 
-.comment-delete-btn:active,
-.comment-delete-btn:hover {
+.delete-btn:active,
+.delete-btn:hover {
     background-color: var(--pink-red-dark);
 }
 .comment-edit-form {
@@ -508,7 +509,6 @@ footer {
     padding: 15px;
 }
 
-
 .article-grid-item > * {
     margin: 0;
 }
@@ -526,3 +526,55 @@ footer {
 }
 
 /* Viewing all articles end*/
+
+.dashboard-article-link {
+    white-space: wrap;
+    word-wrap: break-word;
+    background-color: var(--black);
+    border-radius: 5px;
+    padding: 15px;
+}
+
+.dashboard-article-options-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+
+    justify-content: center;
+}
+
+.is-published-checkbox {
+    height: 25px;
+    width: 25px;
+    accent-color: var(--persian-pink);
+    height: 100px;
+}
+
+.dashboard-article-link-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    margin: 30px 0;
+    max-width: 750px;
+}
+
+.dashboard-article-options-wrapper label {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    margin: 0;
+    height: 90px;
+}
+
+.dashboard-wrapper {
+    min-width: 250px;
+}
+
+.create-new-post {
+    padding: 15px;
+    border-radius: 8px;
+}
+
+.post-maker{
+    
+}
