--- a/client/src/index.css
+++ b/client/src/index.css
@@ -170,7 +170,7 @@ main {
 }
 
 .content-wrapper {
-    max-width: 750px;
+    width: 750px;
     min-width: 250px;
 }
 
@@ -216,6 +216,7 @@ footer {
     padding: 12px 20px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
     animation: slideUp 0.3s ease-out;
+    display: flex;
 }
 
 .error-message .closing {
@@ -483,8 +484,7 @@ footer {
 
 /* Viewing all articles */
 
-.articles-wrapper {
-}
+
 .article-grid {
     list-style-type: none;
     overflow: hidden;
@@ -535,6 +535,13 @@ footer {
     padding: 15px;
 }
 
+.dashboard-article-link > a {
+    text-align: center;
+    width: 100%;
+    display: inline-block;
+    margin-bottom: 15px;
+}
+
 .dashboard-article-options-wrapper {
     display: flex;
     align-items: center;
@@ -543,7 +550,7 @@ footer {
     justify-content: center;
 }
 
-.is-published-checkbox {
+.checkbox {
     height: 25px;
     width: 25px;
     accent-color: var(--persian-pink);
@@ -568,13 +575,72 @@ footer {
 
 .dashboard-wrapper {
     min-width: 250px;
+    width: 750px;
 }
 
 .create-new-post {
     padding: 15px;
     border-radius: 8px;
+    width: 145px;
+    color: var(--black);
+    text-align: center;
 }
 
-.post-maker{
-    
+.post-maker {
+    display: flex;
+    flex-direction: column;
+    width: 750px;
+    min-width: 250px;
+    padding: 15px;
+    margin: 15px 0;
+    border-radius: 15px;
+    background-color: var(--black);
+}
+
+.post-maker > input {
+    font-size: 24px;
+}
+
+.post-maker > input,
+.post-maker-textbox {
+    background-color: var(--charcoal);
+    color: white;
+    border: none;
+    outline: none;
+    padding: 8px;
+}
+
+.post-maker-textbox {
+    resize: none;
+    height: 100%;
+}
+.post-maker-btn {
+    height: 50px;
+    padding: 4px;
+    width: 100px;
+    border-radius: 10px;
+}
+
+.bottom-post-maker {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: 16px;
+    height: 80px;
+}
+
+.bottom-post-maker > label {
+    display: flex;
+    align-items: center;
+}
+
+.post-maker > label {
+    font-weight: bold;
+    margin: 4px 0;
+}
+
+.dashboard-top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
